feat: full board aggregation (#167)
* test: test suite for handler, service, repo

* feat: implement PgTask.ListByBoardID

* feat: service Board.GetAggregate

* feat: GetAggregation handler method and router wiring

* test(e2e): add aggregation endpoint check

* refactor(service): use more narrow interface for column repository

* refactor: always preallocate space before binding columns
